--- a/_includes/analytics.html
+++ b/_includes/analytics.html
@@ -11,3 +11,19 @@
 	</script>
 	<!-- End Google Analytics -->
 {% endif %}
+<!-- Start of StatCounter Code for Default Guide -->
+<script type="text/javascript">
+	var sc_project=10249767; 
+	var sc_invisible=1; 
+	var sc_security="74a66dd6"; 
+	var scJsHost = (("https:" == document.location.protocol) ? "https://secure." : "http://www.");
+	document.write("<sc"+"ript type='text/javascript' src='" +scJsHost+"statcounter.com/counter/counter.js'></"+"script>");
+</script>
+<noscript>
+	<div class="statcounter">
+		<a title="shopify analytics ecommerce tracking" href="http://statcounter.com/shopify/" target="_blank">
+			<img class="statcounter" src="http://c.statcounter.com/10249767/0/74a66dd6/1/" alt="shopify analytics ecommerce	tracking">
+		</a>
+	</div>
+</noscript>
+<!-- End of StatCounter Code for Default Guide -->
