--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -13,5 +13,9 @@ layout: default
     Written on {{ page.date | date: "%B %e, %Y" }}
   </div>
 
+  <div class="tags">
+    {{ page.tags }}
+  </div>
+
   {% include disqus.html disqus_identifier=page.disqus_identifier %}
 </article>
