--- a/style.scss
+++ b/style.scss
@@ -287,3 +287,13 @@ footer {
 // ... Otherwise it really bloats up the top of the CSS file and makes it difficult to find the start
 @import "_highlights";
 @import "_svg-icons";
+
+
+// User-added
+.tags {
+  margin-top: 15px;
+}
+
+.date {
+  text-align: right;
+}
