--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -14,7 +14,14 @@ layout: default
   </div>
 
   <div class="tags">
-    <i>tags</i>: {{ page.tags | split:' ' | sort }}
+    {% capture tags %}
+      {% for tag in site.tags %}
+        {{ tag[0] }}
+      {% endfor %}
+    {% endcapture %}
+    {% assign sortedtags = tags | split:' ' | sort %}
+    
+    <i>tags</i>: {{ sortedtags }}
   </div>
 
   {% include disqus.html disqus_identifier=page.disqus_identifier %}
