--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -9,19 +9,19 @@ layout: default
     {{ content }}
   </div>
 
+  <div class="sign">
+    <code>- ksami</code>
+  </div>
+
   <div class="date">
     Written on {{ page.date | date: "%B %e, %Y" }}
   </div>
 
   <div class="tags">
-    {% capture tags %}
-      {% for tag in site.tags %}
+    <i>tags</i>:
+      {% for tag in page.tags %}
         {{ tag[0] }}
       {% endfor %}
-    {% endcapture %}
-    {% assign sortedtags = tags | split:' ' | sort %}
-    
-    <i>tags</i>: {{ sortedtags }}
   </div>
 
   {% include disqus.html disqus_identifier=page.disqus_identifier %}
