--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -18,10 +18,12 @@ layout: default
   </div>
 
   <div class="tags">
-    <i>tags</i>:
-      {% for tag in page.tags %}
-        {{ tag[0] }}
-      {% endfor %}
+    {% for tag in page.tags %}
+      <a href="{{ site.url }}/tags.html#{{ tag | cgi_escape | sort }}" title="Pages tagged {{ tag }}" rel="tag">{{ tag }}</a>
+      {% unless forloop.last %}
+      , 
+      {% endunless %}
+    {% endfor %}
   </div>
 
   {% include disqus.html disqus_identifier=page.disqus_identifier %}
