--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -19,7 +19,7 @@ layout: default
 
   <div class="tags">
     {% for tag in page.tags %}
-      <a href="{{ site.url }}/tags.html#{{ tag | cgi_escape | sort }}" title="Pages tagged {{ tag }}" rel="tag">{{ tag }}</a>
+      <a href="{{ site.url }}/tags.html#{{ tag | sort }}" title="Pages tagged {{ tag }}" rel="tag">{{ tag }}</a>
       {% unless forloop.last %}
       , 
       {% endunless %}
