--- a/style.scss
+++ b/style.scss
@@ -290,6 +290,16 @@ footer {
 
 
 // User-added
+.date {
+  float: right;
+}
+
 .tags {
   margin-top: 15px;
+}
+
+.sign {
+  margin-top: 15px;
+  margin-bottom: 15px;
+  text-align: right;
 }
