--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,6 +5,10 @@ layout: default
 <article class="post">
   <h1>{{ page.title }}</h1>
 
+  <div class="date">
+    Written on {{ page.date | date: "%B %e, %Y" }}
+  </div>
+
   <div class="entry">
     {{ content }}
   </div>
@@ -13,17 +17,13 @@ layout: default
     <code>- ksami</code>
   </div>
 
-  <div class="date">
-    Written on {{ page.date | date: "%B %e, %Y" }}
-  </div>
-
   <div class="tags">
-    {% for tag in page.tags %}
-      <a href="{{ site.url }}/tags.html#{{ tag | cgi_escape }}" title="Pages tagged {{ tag }}" rel="tag">{{ tag }}</a>
-      {% unless forloop.last %}
-      , 
-      {% endunless %}
+    {% capture tags %}{% for tag in page.tags %}{{ tag }}{% endfor %}{% endcapture %}
+    {% assign sortedtags = tags | split:',' | sort %}
+    {% for tag in sortedtags %}
+      <a href="{{ site.url }}/tags.html#{{ tag | cgi_escape }}" title="Pages tagged {{ tag }}" rel="tag">{{ tag }}</a>{% unless forloop.last %}, {% endunless %}
     {% endfor %}
+  }
   </div>
 
   {% include disqus.html disqus_identifier=page.disqus_identifier %}
