--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -18,12 +18,9 @@ layout: default
   </div>
 
   <div class="tags">
-    {% capture tags %}{% for tag in page.tags %}{{ tag }}{% endfor %}{% endcapture %}
-    {% assign sortedtags = tags | split:',' | sort %}
-    {% for tag in sortedtags %}
+    {% for tag in page.tags %}
       <a href="{{ site.url }}/tags.html#{{ tag | cgi_escape }}" title="Pages tagged {{ tag }}" rel="tag">{{ tag }}</a>{% unless forloop.last %}, {% endunless %}
     {% endfor %}
-  }
   </div>
 
   {% include disqus.html disqus_identifier=page.disqus_identifier %}
