--- a/style.scss
+++ b/style.scss
@@ -291,7 +291,7 @@ footer {
 
 // User-added
 .date {
-  float: right;
+  text-align: right;
 }
 
 .tags {
@@ -299,7 +299,7 @@ footer {
 }
 
 .sign {
-  margin-top: 15px;
+  margin-top: 30px;
   margin-bottom: 15px;
   text-align: right;
 }
