edit post, change blog color

--- a/style.scss
+++ b/style.scss
@@ -18,7 +18,7 @@ html {
 }
 
 body {
-	background: $lightGray;
+	background: $lightBlueGray;
   font: 18px/1.4 $helvetica;
   color: $darkGray;
 }
@@ -152,7 +152,7 @@ img {
 
 .wrapper-masthead {
   margin-bottom: 50px;
-  background-color: $lightBlueGray;
+  background-color: $blue;
 }
 
 .masthead {
