change color, syntax highlight using liquid

--- a/style.scss
+++ b/style.scss
@@ -18,7 +18,7 @@ html {
 }
 
 body {
-	background: $lightBlueGray;
+	background: $lightOrange;
   font: 18px/1.4 $helvetica;
   color: $darkGray;
 }
