--- a/_scss/_variables.scss
+++ b/_scss/_variables.scss
@@ -5,7 +5,8 @@
 
 // Colors
 $blue: #4183C4;
-$lightBlueGray: #cfd8dc; 
+$lightBlueGray: #cfd8dc;
+$lightOrange: #ffe0b2;
 
 // Grays
 $black: #000;
