--- a/style.scss
+++ b/style.scss
@@ -244,7 +244,7 @@ nav {
 
 .posts > .post {
   padding-bottom: 2em;
-  border-bottom: 1px solid $lightGray;
+  border-bottom: 1px solid $darkerGray;
 }
 
 .posts > .post:last-child {
