--- a/style.scss
+++ b/style.scss
@@ -152,7 +152,7 @@ img {
 
 .wrapper-masthead {
   margin-bottom: 50px;
-  background-color: $blue;
+  background-color: transparent;
 }
 
 .masthead {
@@ -195,7 +195,7 @@ img {
   margin: 0;
   color: $darkGray;
   cursor: pointer;
-  font-family: $helveticaNeue;
+  font-family: $robotoSlab;
   font-weight: 300;
   font-size: 28px;
   letter-spacing: 1px;
