--- a/_scss/_variables.scss
+++ b/_scss/_variables.scss
@@ -18,10 +18,12 @@ $lightGray: #eee;
 $white: #fff;
 
 // Font stacks
+@import url(http://fonts.googleapis.com/css?family=Roboto);
 @import url(http://fonts.googleapis.com/css?family=Roboto+Slab);
 $helvetica: Helvetica, Arial, sans-serif;
 $helveticaNeue: "Helvetica Neue", Helvetica, Arial, sans-serif;
 $georgia: Georgia, serif;
+$roboto: Roboto, sans-serif;
 $robotoSlab: "Roboto Slab", serif;
 
 // Mobile breakpoints
