--- a/style.scss
+++ b/style.scss
@@ -19,7 +19,7 @@ html {
 
 body {
 	background: $lightBlueGray;
-  font: 18px/1.4 $roboto;
+  font: 18px/1.4 $robotoSlab;
   color: $darkGray;
 }
 
@@ -31,7 +31,7 @@ body {
 }
 
 h1, h2, h3, h4, h5, h6 {
-  font-family: $robotoSlab;
+  font-family: $roboto;
   color: $darkerGray;
   font-weight: bold;
 
