--- a/_scss/_variables.scss
+++ b/_scss/_variables.scss
@@ -20,11 +20,13 @@ $white: #fff;
 // Font stacks
 @import url(http://fonts.googleapis.com/css?family=Roboto:400,700);
 @import url(http://fonts.googleapis.com/css?family=Roboto+Slab:400,700);
+@import url(http://fonts.googleapis.com/css?family=Open+Sans:400,700,700italic,400italic);
 $helvetica: Helvetica, Arial, sans-serif;
 $helveticaNeue: "Helvetica Neue", Helvetica, Arial, sans-serif;
 $georgia: Georgia, serif;
 $roboto: Roboto, sans-serif;
 $robotoSlab: "Roboto Slab", serif;
+$openSans: "Open Sans", sans-serif;
 
 // Mobile breakpoints
 @mixin mobile {
