--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -15,10 +15,11 @@ layout: default
   </div>
 
   <div class="sign">
-    <code>- ksami</code>
+    - ksami
   </div>
 
   <div class="tags">
+    Tags: 
     {% for tag in page.tags %}
       <a href="{{ site.url }}/tags.html#{{ tag | cgi_escape }}" title="Pages tagged {{ tag }}" rel="tag">{{ tag }}</a>{% unless forloop.last %}, {% endunless %}
     {% endfor %}
