--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -33,7 +33,8 @@
           
           <nav>
             <a href="{{ site.baseurl }}/">Blog</a>
-            <a href="{{ site.baseurl }}/tags.html">Tags</a>
+            <a href="{{ site.baseurl }}/music">Music</a>
+            <a href="{{ site.baseurl }}/tags">Tags</a>
             <a href="{{ site.baseurl }}/about">About</a>
           </nav>
         </header>
