--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -74,7 +74,7 @@
       // --- common properties ---
 
       this.autoStart = true;          // Whether the snow should start automatically or not.
-      this.flakesMax = 60;           // Limit total amount of snow made (falling + sticking)
+      this.flakesMax = 300;           // Limit total amount of snow made (falling + sticking)
       this.flakesMaxActive = 60;      // Limit amount of snow falling at once (less = lower CPU use)
       this.animationInterval = 40;    // Theoretical "miliseconds per frame" measurement. 20 = fast + smooth, but high CPU use. 50 = more conservative, but slower
       this.excludeMobile = true;      // Snow is likely to be bad news for mobile phones' CPUs (and batteries.) By default, be nice.
@@ -85,7 +85,7 @@
       this.snowStick = true;          // Whether or not snow should "stick" at the bottom. When off, will never collect.
       this.targetElement = null;      // element which snow will be appended to (null = document.body) - can be an element ID eg. 'myDiv', or a DOM node reference
       this.useMeltEffect = true;      // When recycling fallen snow (or rarely, when falling), have it "melt" and fade out if browser supports it
-      this.useTwinkleEffect = true;  // Allow snow to randomly "flicker" in and out of view while falling
+      this.useTwinkleEffect = false;  // Allow snow to randomly "flicker" in and out of view while falling
       this.usePositionFixed = false;  // true = snow does not shift vertically when scrolling. May increase CPU load, disabled by default - if enabled, used only where supported
 
       // --- less-used bits ---
