--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -34,7 +34,7 @@
           <nav>
             <a href="{{ site.baseurl }}/">Blog</a>
             <a href="{{ site.baseurl }}/music">Music</a>
-            <a href="https://ksami.github.io/morse-translator/">Morse Code</a>
+            <a href="{{ site.baseurl }}/playthings">Playthings</a>
             <a href="{{ site.baseurl }}/tags">Tags</a>
             <a href="{{ site.baseurl }}/about">About</a>
           </nav>
