--- a/style.scss
+++ b/style.scss
@@ -18,7 +18,7 @@ html {
 }
 
 body {
-	background: $lightBlueGray;
+  background: $lightGray;
   font: 18px/1.4 $openSans;
   color: $darkGray;
 }
@@ -31,7 +31,7 @@ body {
 }
 
 h1, h2, h3, h4, h5, h6 {
-  font-family: $robotoSlab;
+  font-family: $openSans;
   color: $darkerGray;
   font-weight: bold;
 
