--- a/style.scss
+++ b/style.scss
@@ -18,7 +18,7 @@ html {
 }
 
 body {
-  background: $lightGray;
+  background: $white;
   font: 18px/1.4 $openSans;
   color: $darkGray;
 }
@@ -195,7 +195,7 @@ img {
   margin: 0;
   color: $darkGray;
   cursor: pointer;
-  font-family: $robotoSlab;
+  font-family: $openSans;
   font-weight: 300;
   font-size: 28px;
   letter-spacing: 1px;
@@ -214,7 +214,7 @@ img {
 nav {
   float: right;
   margin-top: 23px; // @TODO: Vertically middle align
-  font-family: $robotoSlab;
+  font-family: $openSans;
   font-size: 18px;
 
   @include mobile {
