--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,6 +10,12 @@
     <meta name="author" content="{{ site.name }}" />
     <meta name="description" content="{{ site.description }}">
 
+    <!-- OpenGraph tags -->
+    <meta property="og:title" content="{% if page.title %}{{ page.title }}{% else %}Blog{% endif %}" />
+    <meta property="og:site_name" content="{{ site.name }}"/>
+    <meta property="og:description" content="{{ site.description }}" />
+    <meta property="og:image" content="{{ site.avatar }}" />
+
     <!--[if lt IE 9]>
       <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
